unpackaged/main/default/objects/Work_Type_Line_Item__c/Work_Type_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Work Type Line Item</label>
    <nameField>
        <displayFormat>WT-LI-{0}</displayFormat>
        <label>Work Type Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Type Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>