unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>E.g. Undertake the repair in conjunction with the manufacturers instructions.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>