unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Duration_Type__c</fullName>
    <description>Hours or Minutes</description>
    <inlineHelpText>Hours or Minutes</inlineHelpText>
    <label>Duration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>