unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>Group_Lookup__r.Name</formula>
    <label>Group</label>
    <type>Text</type>
</CustomField>