unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Group_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Group_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Lookup</label>
    <referenceTo>Group__c</referenceTo>
    <relationshipLabel>Work Type Line Items</relationshipLabel>
    <relationshipName>Work_Type_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>