unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the work, e.g.: Undertake the repair in conjunction with the manufacturers instructions.</description>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>