unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Order_to_be_Completed_in__c.field-meta.xml
<CustomField>
    <fullName>Order_to_be_Completed_in__c</fullName>
    <label>Order to be Completed in</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>