unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <formula>Trade_Lookup__r.Name</formula>
    <label>Trade</label>
    <type>Text</type>
</CustomField>