unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Trade_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Trade_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Lookup</label>
    <referenceTo>Trade__c</referenceTo>
    <relationshipLabel>Work Type Line Items</relationshipLabel>
    <relationshipName>Work_Type_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>