unpackaged/main/default/objects/Work_Type_Line_Item__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipName>Work_type_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>